// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SASS Typings ignored1.scss: files 1`] = `Array []`;

exports[`SASS Typings ignored2.scss: files 1`] = `Array []`;

exports[`SASS Typings styles.sass: files 1`] = `
Array [
  "styles.sass.d.ts",
]
`;

exports[`SASS Typings styles.sass: styles.sass.d.ts 1`] = `
"declare interface IStyles {
  exampleImport: string;
  exampleApp: string;
  exampleButton: string;
}
declare const styles: IStyles;
export default styles;"
`;

exports[`SASS Typings stylesAltSyntax.global.scss: files 1`] = `
Array [
  "stylesAltSyntax.global.scss.d.ts",
]
`;

exports[`SASS Typings stylesAltSyntax.global.scss: stylesAltSyntax.global.scss.d.ts 1`] = `"export {};"`;

exports[`SASS Typings stylesAltSyntax.scss: files 1`] = `
Array [
  "stylesAltSyntax.global.scss.d.ts",
  "stylesAltSyntax.scss.d.ts",
]
`;

exports[`SASS Typings stylesAltSyntax.scss: stylesAltSyntax.global.scss.d.ts 1`] = `"export {};"`;

exports[`SASS Typings stylesAltSyntax.scss: stylesAltSyntax.scss.d.ts 1`] = `
"declare interface IStyles {
  label: string;
}
declare const styles: IStyles;
export default styles;"
`;

exports[`SASS Typings stylesUseAltSyntax.scss: files 1`] = `
Array [
  "stylesUseAltSyntax.scss.d.ts",
]
`;

exports[`SASS Typings stylesUseAltSyntax.scss: stylesUseAltSyntax.scss.d.ts 1`] = `
"declare interface IStyles {
  label: string;
  exampleList: string;
  exampleListItem1: string;
  exampleListItem2: string;
  exampleListItem3: string;
}
declare const styles: IStyles;
export default styles;"
`;

exports[`SASS Typings stylesUseSyntax.sass: files 1`] = `
Array [
  "stylesUseSyntax.sass.d.ts",
]
`;

exports[`SASS Typings stylesUseSyntax.sass: stylesUseSyntax.sass.d.ts 1`] = `
"declare interface IStyles {
  exampleAnchor: string;
}
declare const styles: IStyles;
export default styles;"
`;
